@@ -1,3 +1,14 @@
+Sat Oct 13 03:01:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (realpath_rec): prevent link from GC while link_names refers
+	  the content.
+
+Sat Oct 13 01:37:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/ruby/test_regexp.rb
+	  (TestRegexp#test_raw_hyphen_and_type_char_after_range): added new
+	  test. ref [ruby-core:47115] [Backport #6853]
+
 Fri Oct 12 21:55:08 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>
 
 	* include/ruby/win32.h (rb_w32_pow): set floating point precision
